fix vertical align of storyboard items

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -903,7 +903,8 @@ label.css-label {
         border: 1px solid transparent !important; }
 
 .divStoryboardSceneItemFullContainer {
-  display: inline-block; }
+  display: inline-block;
+  vertical-align: top; }
 
 .divStoryboardSceneItemFull {
   display: inline-block;
